# Multi-Robot-Collaboration

./: .gitignore  .gitmodules  APF_Controller.py  APF_Path.py  BotZoneCreation.m  Distance_Euclidian.py  Object_Creation.py  Potential_Attractions.py  Potential_Fields_Prototyping.py  Potential_Repulsion.py  Potential_Repulsion_Updated.py  Visualiser.py  build_sim.sh  catkin_make_pi.sh  clear_workspace.sh  connect_mover6a.sh  connect_mover6b.sh  connect_robo_setup.sh  fad_sensor_start.sh  frames.gv  gui.sh  is_blocks_vis.sh  lidar.sh  open_cam_fad.sh  open_overhead_cam.sh  readme.md  reconnect_robo.sh  ros_network_setup.sh  run_demo.sh  run_demo_APF.sh  run_demo_path_test.sh  run_demo_phys.sh  run_fiducial_recognition.sh  run_sim.sh  run_sim_control.sh  run_sim_path_test.sh  run_sim_phys.sh  run_sim_python.sh  run_sim_python_demo.sh  safety_stop_manual.sh  (+3 more)
devel/: .catkin  setup.sh
devel/include/cpr_robot/: GetJointInfoRequest.h  GetJointInfoResponse.h  GetRobotInfoRequest.h  GetRobotInfoResponse.h  RobotCommandRequest.h
devel/lib/cpr_robot/: CPRMover6  igus_4DOF_SV  igus_5DOF_SV
devel/lib/pkgconfig/: cpr_robot.pc  gazebo_tutorials.pc  mover6_description.pc  mover6_gazebo.pc  rrbot_control.pc  rrbot_description.pc  rrbot_gazebo.pc
docs/: fixes.md  install.md  node_info.md
fiducial_imgs/: fiducial_images.sh  script.py  script.txt
fiducial_imgs/tag25h9/: alltags.ps
install/: local_setup.sh
install/include/cpr_robot/: GetRobotInfo.h  RobotCommandResponse.h
install/lib/pkgconfig/: cpr_robot.pc  mover6_gazebo.pc
old/install/: .rosinstall  setup.sh
src/GUI/: CMakeLists.txt  package.xml
src/GUI/src/: gazeboGUI.py  simulationTime.py
src/GreiferZF_2016/: CMakeLists.txt  package.xml
src/GreiferZF_2016/meshes/: base_link.STL  gripper_b.STL
src/GreiferZF_2016/urdf/: GreiferZF_2016.urdf
src/apriltag_ros/config/: settings.yaml  tags.yaml
src/assignment_selection/: CMakeLists.txt  package.xml
src/assignment_selection/launch/: test_reach.launch  test_tower.launch
src/assignment_selection/matlab_scripts/: SelectionProcess.m  SelectionProcessBarrier.m  TestingFile.m  TestingFileForSelectionBarrier.m  selection_sim.m
src/assignment_selection/scripts/: arena_locals.py  basic_block_selection.py  block_selection.py  randomBlockLoaclGen.py  selection_prossess.py  test_arrays.py  test_block_reachability.py  tower_test.py
src/automatic_setup/: CMakeLists.txt  package.xml
src/automatic_setup/scripts/: move_object.py
src/basic_movement/: CMakeLists.txt  package.xml
src/basic_movement/scripts/: NewJointANgles.py  joint_controller.py  listener.py
src/basic_movement/src/: BasicMovement.cpp  BasicMovementJoint2.cpp  GoalMovementMover6.cpp  listenerincpp.cpp
src/block_controller/: CMakeLists.txt  package.xml
src/block_controller/launch/: block_controller.launch
src/block_controller/msg/: Block.msg  Blocks.msg
src/block_controller/scripts/: block_pos_talker.py  block_spawner.cpp  place_blocks.py  spawn_blocks.py  spawn_blocks_phys.py  spawn_test_block.py  update_blocks_phys.py
src/block_controller/srv/: UpdateBlocks.srv
src/block_controller/urdf/: block.urdf
src/cpr_robot/: CMakeLists.txt  CPRMover6.launch  CPRMover6.rviz  mover6_setup_muti_robot.launch
src/cpr_robot/src/: Gripper_Control.cpp  Joint.cpp  JointControl.cpp  Robot.cpp  RobotPanel.cpp
src/custom_msgs/: CMakeLists.txt  package.xml
src/custom_msgs/msg/: APFPlot.msg  apf_coords.msg
src/e_stop/: CMakeLists.txt  package.xml
src/e_stop/scripts/: e_stop.py  e_stop_controller.py  e_stop_manual.py
src/fiducial_recognition/: CMakeLists.txt  package.xml
src/fiducial_recognition/launch/: fiducial_recognition.launch  sensor_launch.launch
src/fiducial_recognition/nodes/: static_tf2_broadcaster.py  tf2_listener.py
src/fiducial_recognition/scripts/: apriltag_recog.py  block_position_publisher.py  camera.py  loglevel.py
src/gui/: CMakeLists.txt
src/gui/launch/: gui.launch
src/gui/scripts/: GUI.py  checkSim.py  serviceCheck.py  simulationTime.py
src/human_zone/: CMakeLists.txt  package.xml
src/human_zone/launch/: lidar_launch.launch
src/human_zone/scripts/: human_detection.py
src/human_zone/src/: rplidar_human_detection.cpp  sensor_range.cpp
src/inv_kinematics/: CMakeLists.txt  package.xml
src/inv_kinematics/msg/: ArmPos.msg
src/inv_kinematics/scripts/: CPMOVER6.urdf  CPRMOVER6.urdf  inv_kin_ros.m  (+6 more)
src/joint_controller/: CMakeLists.txt  package.xml  test_launch.launch
src/joint_controller/scripts/: gripper_controller.py  joint_controller.py  listener.py  manualGripperControll.py  manual_gripper_control_a.py  manual_gripper_control_b.py  talker.py
src/joint_controller/src/: GripperControlV2.cpp  listenerincpp.cpp  mover6_driver.cpp
src/movement_demo/: CMakeLists.txt  package.xml
src/mover6_control/: CMakeLists.txt  package.xml
src/mover6_description/: CMakeLists.txt  mover6.rviz
src/mover6_gazebo/: CMakeLists.txt  package.xml
src/mover6_gripper/: CMakeLists.txt  package.xml
src/mover6_joint_movement_demo/: CMakeLists.txt  package.xml
src/path_planning/: CMakeLists.txt  package.xml  setup.py
src/play_pause_demo/: CMakeLists.txt  package.xml
src/potential_fields/: CMakeLists.txt  package.xml
src/sim_control_test/: CMakeLists.txt  package.xml
src/zone_controller/: CMakeLists.txt  package.xml
src/zone_detection/: CMakeLists.txt  package.xml
(+278 files in other folders)
