<?xml version="1.0"?>
<package format="2">
  <name>joint_controller</name>
  <version>0.0.0</version>

   <author>Jonathan Aitken</author>
  <maintainer email="jonathan.aitken@sheffield.ac.uk">Jonathan Aitken</maintainer>

  <description>Simple Movement package</description>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>custom_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>control_msgs</build_export_depend>
  <build_export_depend>custom_msgs</build_export_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>custom_msgs</exec_depend>

  <build_depend>cpr_robot</build_depend>
  <build_export_depend>cpr_robot</build_export_depend>
  <exec_depend>cpr_robot</exec_depend>


</package>
